# loopeng

./: .gitignore  CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
examples/: .mcp.json  README.md  plan.yaml  reverse_echo_plugin.py
examples/codex-cli-demo/: .gitignore  README.md  greeting.py  loop.yaml  verify.py
integrations/claude-code-skill/: README.md  SKILL.md
integrations/codex-skill/: AGENTS.md  README.md
src/loopeng/: __init__.py  __main__.py  adapters.py  baseline.py  blast_radius.py  cli.py  errors.py  events.py  git_state.py  heartbeat.py  hooks.py  ledger.py  mcp_server.py  orchestrator.py  plugins.py  proc.py  resume.py  runner.py  skills.py  spec.py  triggers.py  worktree.py
src/loopeng/skills_lib/: __init__.py  fix-until-tests-pass.yaml  shell-converge.yaml
tests/: conftest.py  test_adapters.py  test_baseline.py  test_blast_radius.py  test_cli.py  test_cli_platform.py  test_codex_example.py  test_codex_skill.py  test_context.py  test_events.py  test_git_state.py  test_heartbeat.py  test_hooks.py  test_ledger.py  test_mcp_server.py  test_orchestrator.py  test_packaging.py  test_plugins.py  test_preflight.py  test_proc.py  test_resume.py  test_run_json.py  test_runner.py  test_runner_blast_radius.py  test_skills.py  test_spec.py  test_stall.py  test_status.py  test_steering.py  test_triggers.py  test_worktree.py
