[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loopeng"
version = "0.1.0"
description = "Agent-agnostic Loop Engineering runner: portable loop spec + verification gate + guardrails + auditable ledger."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = ["pyyaml>=6"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
loopeng = "loopeng.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
