[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "loopeng"
version = "0.3.3"
description = "Agent-agnostic Loop Engineering runner: portable loop spec + verification gate + guardrails + auditable ledger."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "win4r" }]
keywords = ["agent", "loop", "claude-code", "codex", "llm", "automation", "verification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
]
dependencies = ["pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/win4r/loopeng"
Repository = "https://github.com/win4r/loopeng"
Changelog = "https://github.com/win4r/loopeng/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
loopeng = "loopeng.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"loopeng.skills_lib" = ["*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
